# air-radar

./: .dockerignore  .gitignore  Consume_and_Save_data.py  Dockerfile  LICENSE  README.md  air-radar-firebase.json  app.py  consume_json.js  dashboard.html  datos.json  datos_momentaneos.py  docker-compose.yml  pyproject.toml
app/: main.py
app/models/: measurement.py
app/routes/: measurements.py
