[tool.poetry]
name = "air-radar"
version = "0.0.2"
description = "Air quality API"
authors = ["RookieCol","Sergio29o03"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.8"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
